--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "start": "nodemon index.js",
     "start": "node index.js"
   },
+  "scripts": {
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env =jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
