--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "engines": {
     "node": "16.13.1"
     },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "start": "node index.js"
-  },
+    "scripts": {
+      "dev": "react-scripts start",
+      "start": "serve -s build",
+      "build": "react-scripts build",
+      "test": "react-scripts test --env =jsdom",
+      "eject": "react-scripts eject",
+      "heroku-postbuild": "npm run build"
+      },
+      
   "keywords": [],
   "author": "",
   "license": "ISC",
