--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "main": "index.js",
   "engines": {
     "node": "16.13.1"
-    },
-    "scripts": {
-      "dev": "react-scripts start",
-      "start": "serve -s build",
-      "build": "react-scripts build",
-      "test": "react-scripts test --env =jsdom",
-      "eject": "react-scripts eject",
-      "heroku-postbuild": "npm run build"
-      },
-      
+  },
+  
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
+  },
+  "scripts": {
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env =jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -27,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.13",
     "serialport": "^9.2.4",
+    "serve": "^13.0.2",
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
