--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "engines": {
     "node": "16.13.1"
   },
-  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "start": "node index.js"
-  },
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env =jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
+    },
+    
+ 
   "keywords": [],
   "author": "",
   "license": "ISC",
