--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env =jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "start": "node index.js"
     },
     
  
