--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env =jsdom",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "start": "node index.js"
-    },
+    "heroku-postbuild": "npm run build"
+    },  
+    
+    
+    
+      "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon index.js"
+      },
     
  
   "keywords": [],
