--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
-{
-  "name": "servidor",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "16.13.1"
-  },
-  "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env =jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
-    },  
+// {
+//   "name": "servidor",
+//   "version": "1.0.0",
+//   "description": "",
+//   "main": "index.js",
+//   "engines": {
+//     "node": "16.13.1"
+//   },
+//   "scripts": {
+//     "dev": "react-scripts start",
+//     "start": "serve -s build",
+//     "build": "react-scripts build",
+//     "test": "react-scripts test --env =jsdom",
+//     "eject": "react-scripts eject",
+//     "heroku-postbuild": "npm run build"
+//     },  
     
     
     
-      "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon index.js"
-      },
+//       "scripts": {
+//         "test": "echo \"Error: no test specified\" && exit 1",
+//         "start": "nodemon index.js"
+//       },
     
  
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.13.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13",
-    "serialport": "^9.2.4",
-    "serve": "^13.0.2",
-    "socket.io": "^4.2.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.13"
-  }
-}
+//   "keywords": [],
+//   "author": "",
+//   "license": "ISC",
+//   "dependencies": {
+//     "bcryptjs": "^2.4.3",
+//     "cors": "^2.8.5",
+//     "dotenv": "^10.0.0",
+//     "express": "^4.17.1",
+//     "express-validator": "^6.13.0",
+//     "jsonwebtoken": "^8.5.1",
+//     "mongoose": "^6.0.13",
+//     "serialport": "^9.2.4",
+//     "serve": "^13.0.2",
+//     "socket.io": "^4.2.0"
+//   },
+//   "devDependencies": {
+//     "nodemon": "^2.0.13"
+//   }
+// }
