--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     
     
     
-//       "scripts": {
-//         "test": "echo \"Error: no test specified\" && exit 1",
-//         "start": "nodemon index.js"
-//       },
+      "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon index.js"
+      },
     
  
 //   "keywords": [],
